为 SFTP 增加密钥 passphrase 参数